@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.jakewharton.butterknife'
 
 android 
 {
@@ -9,6 +10,7 @@ android
     minSdkVersion 14
     targetSdkVersion 29
     versionCode 751
+    multiDexEnabled true
   }
 
   buildTypes 
@@ -23,6 +25,12 @@ android
 
 dependencies
 {
+  implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+  implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+  implementation 'com.squareup:otto:1.3.8'
+  implementation 'com.jakewharton:butterknife:10.2.3'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
   implementation 'com.github.hxcan:CodePosition:2022.7.21'
   implementation 'com.koushikdutta.async:androidasync:3.0.8'
   implementation 'commons-io:commons-io:2.6'
@@ -31,9 +39,39 @@ dependencies
   implementation 'com.mcxiaoke.volley:library:1.0.19'
   implementation 'com.github.hxcan:victoriafresh.android:2022.5.3'
   implementation 'com.upokecenter:cbor:4.4.4'
-  implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+  implementation 'com.google.protobuf:protobuf-java:3.11.4'
   implementation group: 'com.koushikdutta.ion', name: 'ion', version: '3.1.0'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation("io.github.g00fy2:versioncompare:1.4.1")
+  implementation 'com.github.hxcan:upgrademanager:2023.5.8'
+  implementation 'androidx.multidex:multidex:2.0.1'
+
+  implementation('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2') 
+  {
+    exclude module: 'support-v4'
+  }
+}
+
+// # https://stackoverflow.com/questions/65380359/lomboks-access-to-jdk-compilers-internal-packages-incompatible-with-java-16
+
+// # enable internal JDK API access at runtime
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+//         # essential for butterknife
+        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+
+//         # if you need Glide or LomBok
+//         # these may not be the exact list, but it works for me
+        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
+    ]
 }
